2006-06-26  Matti Aarnio  <mea@zmailer.org>

	* configure.in, man/scheduler.8.in, router/rfc822.c,
	  lib/taspoolid.c, scheduler/msgerror.c, scheduler/scheduler.c,
	  scheduler/scheduler.h, scheduler/threads.c,
	  smtpserver/smtpdata.c, transports/libta/ctlopen.c,
	  transports/mailbox/mailbox.c, transports/errormail/errormail.c,
	  transports/reroute/reroute.c:
	    Modified the  taspoolid()  to produce nano-second resolution
	    representation of file modification time -- unfortunately most
	    real filesystems do not support such...

	* smtpserver/smtpserver.h, smtpserver/subdaemon-ctf.c,
	  smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-trk.c,
	  smtpserver/subdaemons.c:
	    Instead of "void *", so pass in a typed structure
	    so help intercept wrong declarations and usages.

2006-06-24  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h, 
	  smtpserver/subdaemons.c, smtpserver/subdaemon-trk.c:
	   Sun SUNWspro compiler v.11 practically wants all
	   global variables that signal handlers modify to be
	   of type "volatile".  --  Nope, didn't help...
	   Latter found extraneous pointer formation and usage
	   where such were not necessary and caused observed
	   misbehaviour...

2006-06-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/cfgread.c:
	    Found incorrect call to  cfg_add_bindaddr() ...
	    Routine had no ANSI prototype, thus compiler didn't
	    flag it during compile..

	* smtpserver/subdaemon-rtr.c:
	    Hunting a bad select() detection..

	* configure.in:
	    Autodetect sys/poll.h,  and  poll() functions.

	* lib/Makefile.in, lib/zmpoll.c, router/daemonsub.c:
	    Introduce internal  zmpoll()  API.

	* router/functions.c:
	    Remove internal explicite 'extern int errno';

	* transports/libta/mimeheaders.c:
	    Compiler complained about untyped (default int) function parameter.

2006-04-06  Daryl L. Miles  (forgotten commits)
	
	* smtpserver/zpwmatch-pipe.c: